style- add height to install the scrollbar and change the border style to avoid seeing border at the bottom

--- a/src/Pages/AdminUserPage/AdminUserPage.module.scss
+++ b/src/Pages/AdminUserPage/AdminUserPage.module.scss
@@ -1,6 +1,7 @@
 .container {
   font-family: "Noto Sans TC", sans-serif;
-  border: 1px solid #e6ecf0;
+  border-left: 1px solid #e6ecf0;
+  border-right: 1px solid #e6ecf0;
   height: 100vh;
 }
 
@@ -14,6 +15,7 @@
 }
 
 .user-list {
+  height: 100vh;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 16px;
